TODO:
* Implement disqus.
* Check http://litanyagainstfear.com/ for more featurs
* Add all arlukin articles posts.
* Attach to arlukin.cybercow.se
* Use http://blog.labnotes.org/2009/03/14/buildr-how-we-generate-the-documentation-web-site-and-pdf/ ?

CHANGELOG:
