@@ -40,7 +40,7 @@
       <!-- Menu - Begin -->
       <div class="menu">
 
-        <h3>Food</h3>
+        <h6>Food</h6>
         <ul>
           {% for post in site.categories.food %}
             <li><a href="{{ post.url }}">{{ post.title }}</a></li>
@@ -50,37 +50,54 @@
       </div>
       <!-- Menu - End-->
 
-      <hr />
-
       <!-- Subscribe - Begin -->
       <div id="subscribe">
+        <h6>Spread the word</h6>
+        <!-- AddThis Button BEGIN -->
+        <div class="addthis_toolbox addthis_default_style ">
+        <a class="addthis_button_preferred_1"></a>
+        <a class="addthis_button_preferred_2"></a>
+        <a class="addthis_button_preferred_3"></a>
+        <a class="addthis_button_preferred_4"></a>
+        <a class="addthis_button_preferred_5"></a>
+        <a class="addthis_button_preferred_6"></a>
+        <a class="addthis_button_preferred_7"></a>
+        <a class="addthis_button_preferred_8"></a>
+        <a class="addthis_button_preferred_9"></a>
+        <a class="addthis_button_preferred_10"></a>
+        <a href="http://www.addthis.com/bookmark.php?v=250&amp;username=arlukin" class="addthis_button_compact"></a>
         <a href="http://arlukin.github.com/atom.xml"><img alt="RSS" src="/images/rss.gif"/></a>
+        </div>
+        <div class="addthis_toolbox addthis_default_style ">
+          <a class="addthis_button_tweet"></a>
+          <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+        </div>
+        <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
+        <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=arlukin"></script>
+        <!-- AddThis Button END -->
       </div>
       <!-- Subscribe - End -->
 
-      <hr />
-
       <!-- Credit - Begin -->
       <div id="credit">
+        <h6>My sites</h6>
         <a href="http://gberga.cybercow.se/">Gberga</a>&nbsp;|&nbsp;
         <a href="http://ngaufu.cybercow.se/">Ngau fu</a>&nbsp;|&nbsp;
         <a href="http://photo.cybercow.se/">Photo</a>&nbsp;|&nbsp;
         <a href="http://sveaborg.cybercow.se/">Sveaborg</a><br />
 
-        <a href="http://nfn.cybercow.se/">Ngau Fu Nunchaku</a>
+        <a href="http://nfn.cybercow.se/">Ngau Fu Nunchaku</a>&nbsp;|&nbsp;
         <a href="http://pege.cybercow.se/">Pjotor Photo</a>&nbsp;|&nbsp;
         <a href="http://awxire.cybercow.se/">Awxire</a><br />
 
         <a href="http://www.fareoffice.com/">Fareoffice</a>&nbsp;|&nbsp;
         <a href="http://www.farepayment.com/">Farepayment</a>&nbsp;|&nbsp;
-        <a href="http://www.nebol.se/">Nebol</a><br />
       </div>
       <!-- Credit - End -->
 
-      <hr />
-
       <!-- Ads for my sites - Begin -->
-      <div id="ads"><a
+      <div id="ads">
+        <h6>Arlukin on internet</h6><a
         href="http://www.facebook.com/arlukin" title="Facebook"><img src="/images/facebook.jpg" alt="Facebook"></a><a
         href="http://se.linkedin.com/in/therealdaniellindh" title="Linkedin"><img src="/images/linkedin.jpg" alt="Linkedin"></a><a
         href="http://github.com/arlukin" title="Github"><img src="/images/github.jpg" alt="Github"></a><a
