@@ -28,6 +28,16 @@ h3 {
   font-size: 1.0em;
 }
 
+h6{
+  font-size:140%;
+  font-weight: bold;
+  margin: 0px 0px 8px 0px;
+  border-bottom: 1px solid #fff;
+  font-variant:small-caps;
+  text-align: left;
+  color:#fff;
+}
+
 p {
   padding: 0.6em 0;
 }
@@ -188,7 +198,11 @@ table td
 /*  Subscribe */
 
 #subscribe{
- text-align:center;
+ #text-align:center;
+}
+
+#subscribe .addthis_toolbox {
+  display: inline;
 }
 
 /* Credits */
@@ -215,6 +229,7 @@ table td
 #ads img {
   height: 16px;
   vertical-align:bottom;
+  margin: 0px 0px 3px 3px;
 }
 
 /*****************************************************************************/
